Se creó con Colab

--- a/2020/Actividad42020.ipynb
+++ b/2020/Actividad42020.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKqTBhZfOECIAnuDl3v2PJ",
+      "authorship_tag": "ABX9TyOwrqRg8v4COswIADpLf3MS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -779,6 +779,8 @@
     {
       "cell_type": "code",
       "source": [
+        "dfgc2020cuali = df_gc_2020.iloc[:,[0,1,2,3,4,5,6,7,15,16,17]]\n",
+        "dfgc2020cuali\n",
         "dfgc2020a = df_gc_2020.iloc[:, 8:15]\n",
         "dfgc2020a"
       ],
@@ -788,9 +790,9 @@
           "height": 424
         },
         "id": "V-BPhOfaZGAQ",
-        "outputId": "b1a3523e-5891-481b-9743-cb6b79640859"
+        "outputId": "4edd4d78-38b8-4b87-918c-92ddb580afbc"
       },
-      "execution_count": 19,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -813,7 +815,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-df8b142f-80f4-4a04-997a-9d871424c790\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-de235c76-7f48-4d9d-977d-852cc7d966f6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -959,7 +961,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-df8b142f-80f4-4a04-997a-9d871424c790')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-de235c76-7f48-4d9d-977d-852cc7d966f6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1011,12 +1013,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-df8b142f-80f4-4a04-997a-9d871424c790 button.colab-df-convert');\n",
+              "        document.querySelector('#df-de235c76-7f48-4d9d-977d-852cc7d966f6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-df8b142f-80f4-4a04-997a-9d871424c790');\n",
+              "        const element = document.querySelector('#df-de235c76-7f48-4d9d-977d-852cc7d966f6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1036,8 +1038,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b1be42d4-bb7d-4255-8f65-4da739ffd559\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b1be42d4-bb7d-4255-8f65-4da739ffd559')\"\n",
+              "<div id=\"df-9947f270-ae28-4b2f-95e6-39112d4b739b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9947f270-ae28-4b2f-95e6-39112d4b739b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1156,14 +1158,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b1be42d4-bb7d-4255-8f65-4da739ffd559 button');\n",
+              "        document.querySelector('#df-9947f270-ae28-4b2f-95e6-39112d4b739b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_72388495-fa81-49e4-b6a8-40ca00515ea9\">\n",
+              "  <div id=\"id_de3f58ce-b575-4025-91d2-3e0cc7cfa96c\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1207,7 +1209,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_72388495-fa81-49e4-b6a8-40ca00515ea9 button.colab-df-generate');\n",
+              "        document.querySelector('#id_de3f58ce-b575-4025-91d2-3e0cc7cfa96c button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1228,7 +1230,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 34
         }
       ]
     },
@@ -2419,13 +2421,24 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "dfgc2020limpioa.to_csv(\"Gastos y costos 2020.csv\")"
-      ],
+      "source": [],
       "metadata": {
         "id": "A7gzbWqNb5yb"
       },
       "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Gastos_y_Costos_2020 = pd.concat([dfgc2020cuali, dfgc2020limpioa], axis=1)\n",
+        "Gastos_y_Costos_2020\n",
+        "Gastos_y_Costos_2020.to_csv(\"Gastos y costos 2020.csv\")"
+      ],
+      "metadata": {
+        "id": "hJ89TTRQdLHy"
+      },
+      "execution_count": 37,
       "outputs": []
     }
   ]
